CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(data_bank_src)

SET(CMAKE_CXX_STANDARD 11)
ADD_COMPILE_OPTIONS(-std=c++11)

FIND_PACKAGE(OpenCV REQUIRED)

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")

ADD_SUBDIRECTORY(util)
LIST(APPEND DATA_BANK_DEP_LIBS t_util)

ADD_SUBDIRECTORY(common)
LIST(APPEND DATA_BANK_DEP_LIBS label_core_common)

ADD_SUBDIRECTORY(mysql_dao)
LIST(APPEND DATA_BANK_DEP_LIBS mysql_dao)

ADD_SUBDIRECTORY(media_access)
LIST(APPEND DATA_BANK_DEP_LIBS media_access)

ADD_SUBDIRECTORY(image_provider)
LIST(APPEND DATA_BANK_DEP_LIBS image_provider)

ADD_SUBDIRECTORY(label_core)
LIST(APPEND DATA_BANK_DEP_LIBS label_core)

LIST(APPEND DATA_BANK_DEP_LIBS ${OpenCV_LIBS})

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(test)

