INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(terminal_io)
LIST(APPEND LABEL_CORE_IO_DEP_LIBS terminal_io)

ADD_SUBDIRECTORY(key_io)
LIST(APPEND LABEL_CORE_IO_DEP_LIBS label_core_key_io)

AUX_SOURCE_DIRECTORY(. LABEL_CORE_IO_SRC)
ADD_LIBRARY(label_core_io  ${LABEL_CORE_IO_SRC})
TARGET_LINK_LIBRARIES(label_core_io ${LABEL_CORE_IO_DEP_LIBS})
