INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")

ADD_SUBDIRECTORY(label)
LIST(APPEND LABEL_MANAGER_DEP_LIBS label_manager_labels)

AUX_SOURCE_DIRECTORY(. LABEL_MANAGER_SRC)
ADD_LIBRARY(label_manager ${LABEL_MANAGER_SRC})
TARGET_LINK_LIBRARIES(label_manager ${LABEL_MANAGER_DEP_LIBS} ${OpenCV_LIBS})
